<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_activity_maps"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_paiement"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/menu_paiement"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_destination"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/menu_destination"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_service"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/menu_services"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom"/>
</menu>