<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/md_white_1000"
    tools:context="com.community.hanrynzale.mapcar.SignupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#212121"
        android:layout_width="match_parent"
        app:title="Inscription"
        app:titleTextColor="@color/md_white_1000"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <!--  Name Label -->
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textColor="#484848"
                    android:hint="@string/name_place"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"/>

            <!-- Prenom Label -->
                <EditText android:id="@+id/input_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/input_name"
                    android:layout_marginTop="25dp"
                    android:inputType="textCapWords"
                    android:textColor="#484848"
                    android:hint="@string/prenom_place"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"/>

            <!-- Email Label -->
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/input_prenom"
                    android:layout_marginTop="25dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#484848"
                    android:hint="@string/email_place"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"/>

            <!-- Password Label -->
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/input_email"
                    android:layout_marginTop="25dp"
                    android:inputType="textPassword"
                    android:hint="@string/password_place"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:textColor="#484848"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"/>

        </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/link_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        android:textAlignment="center"
        android:text="Vous avez déjà un compte? Connectez-vous"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Inscription"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        android:background="@color/bg_login"/>

</android.support.constraint.ConstraintLayout>