<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003366">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_dialog"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <RelativeLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/border_bottom_dialog">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_email"
                android:layout_below="@+id/title"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:hint="@string/email_place"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_password"
                android:layout_below="@+id/title_email"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_place"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:elevation="7dp"
                android:src="@drawable/ic_login"
                android:background="@drawable/circularbouttonlogin"
                android:layout_below="@+id/title_password"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/profile_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.75dp"
            android:src="@drawable/profile_circle_border"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_journalist"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/link_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:layout_above="@+id/link_signup"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/link_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="Créer un compte"
        android:background="@color/material_blue_secondary"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</RelativeLayout>